2005-12-16  Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Added support for ATtiny24/44/84.

2005-12-05  Colin O'Flynn <coflynn@newae.com>

	* avrdude.conf.in: Added m162 support for stk500v2

2005-12-01  Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: fix the number of significant bits for
	the efuse memory in ATmega48/88/168; the datasheet is a bit
	off here as well.

2005-11-29  Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.1: update for JTAG ICE mkI support.
	* doc/avrdude.texi: (Ditto.)

2005-11-29  Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by Galen Seitz:
	patch #4459: Fix for rpm package builds
	* avrdude.spec.in: update the RPM spec file:
	  - Default to enable-doc=yes during configure.
	  - Move info file to docs package.
	  - Make building of docs package conditional.  Basic
	    idea copied from avr-gcc.

2005-11-29  Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by someone who thinks he's called "Daper":
	Fix bug #15013: Wrong use of PPICLAIM (kernel: ppdev0: claim the
	port first)
	* par.c: don't claim/release here (thus win_ppdev.h not needed
	anymore)
	* ppi.c: claim/release here.
	* freebsd_ppi.h: ppi_claim/ppi_release now take an fd as parameter.
	* solaris_ecpp.h: (Ditto.)
	* linux_ppdev.h: (Ditto.)  (Also add copyright.)
	* win_ppdev.h: Not needed anymore, remove.

2005-11-28  Joerg Wunsch <j@uriah.heep.sax.de>

	* jtagmkI.c: Improve the communication startup with the ICE.

2005-11-28  Joerg Wunsch <j@uriah.heep.sax.de>

	* configure.ac: enable parport access on x86_64 Linux and
	FreeBSD systems.

2005-11-27  Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: add the "calibration" space to ATmega16.

2005-11-25 Colin O'Flynn <coflynn@newae.com>

	Fixed bug 15051, building for Windows breaks.
	* par.c: ppi_claim and ppi_release definitions now in a Windows header file
	* ppi.c: Only included if you are building for Windows
	* win_ppdev.h: Initial Commit, see par.c

2005-11-24  Joerg Wunsch <j@uriah.heep.sax.de>
